# avr-compiler-integration-tests

./: .dockerignore  .gitmodules  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  arduino-uart-loop.elf  arduino-uart-single.elf  run-tests.sh  test.sh
src/: main.rs
src/avr-lit/: Cargo.toml  main.rs
src/avr-lit/src/: main.rs
src/avr-sim/: Cargo.toml  main.rs
src/avr-sim/doc/: cli_extended_help.txt
src/avr-sim/sim/: flashable.rs  mod.rs
src/avr-sim/src/: avr_print.rs  main.rs
src/avrsim/: main.rs
src/avrsim/sim/: firmware.rs  flashable.rs  ioctl.rs  mod.rs  pty.rs  uart.rs
src/libavrlit/: avr-lit.hpp  interrupt.h
src/libavrlit/io/: io.h
src/libavrlit/stdlib/: README.md  cstddef  cstdlib  cstring
tests/: .gitignore  README.md  add.cpp  avrlit.hpp  copy_string.cpp  list.cpp  list.hpp  statistics.cpp
tests/arithmetic/: add_u8.cpp
tests/memory/: copy_string.cpp  copy_u16.cpp  copy_u32.cpp  copy_u8.c
tests/memory/copy-immediate-to-sram/: copy_i16.cpp  copy_string.cpp  copy_u16.cpp
tests/memory/copy-to-ram/: copy_i32.cpp  copy_i8.cpp  copy_u32.cpp  copy_u64.cpp
tests/reference/: new_gen_test.atmega328p.avr-gcc.elf  new_gen_test.cpp
tests/support/: sleep.h  support.h  thin_libc.h
tests/unit/arithmetic/: add_i8.cpp  div_u16.cpp  neg_i16.cpp
tests/unit/bitwise/: compare_u16.cpp  shift_i16.cpp  shift_u16.cpp  shift_u8.cpp
tests/unit/bugfix/: misc-D78439-fix-zext-add-miscompilation.c  misc-D78459-absolute-jump-correct-offset.c
tests/unit/calling-convention/: many_arguments.cpp  passthrough_without_modification.cpp
tests/unit/meta/: sim_debug_stream.c
(+16 files in other folders)
