[package]
name = "avr-test-suite"
version = "0.1.0"
authors = ["Dylan McKay <me@dylanmckay.io>"]

[[bin]]
name = "avr-lit"
path = "src/avr-lit/main.rs"

[[bin]]
name = "avr-sim"
path = "src/avr-sim/main.rs"

[dependencies]
lit = "0.2.6"
simavr-sys = { path = "../simavr-sys" }
bitflags = "0.9"
tempfile = "2.1"
vsprintf = "1.0"

